--- a/index.html
+++ b/index.html
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+
     <meta charset="utf-8">
     <title>10K Swim Meet</title>
+    </style>
   </head>
   <body>
+    <h1>18th Annual 10K Swim Meet</h1>
+    <p class="text-justify">For the 18th year in a row, the 10k swim meet will be held. This swim meet takes place for those that are passionate about swimming, and are proud to show their love for the sport.</p>
     <form>
-    <div class="form-group">
-   <label for="exampleFormControlTextarea1">Name</label>
-   <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
- </div>
+      <form>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputname">Name</label>
+      <input type="name" class="form-control" id="inputEmail4" placeholder="Name">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputAddress">Address</label>
+    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+  </div>
+  <div class="form-group">
+    <label for="inputAddress2">Address 2</label>
+    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputCity">City</label>
+      <input type="text" class="form-control" id="inputCity">
+    </div>
+    <div class="form-group col-md-4">
+      <label for="inputState">State</label>
+      <select id="inputState" class="form-control">
+        <option selected>Choose...</option>
+        <option>Michigan</option>
+      </select>
+    </div>
+    <div class="form-group col-md-2">
+      <label for="inputZip">Zip</label>
+      <input type="text" class="form-control" id="inputZip">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="form-check">
+      <label class="form-check-label">
+
+    </div>
+  </div>
+  <div class="form-check form-check-inline">
+    <label class="form-check-label">
+    <p>T-Shirt Size</p>
+      <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1"> S
+    </label>
+  </div>
+  <div class="form-check form-check-inline">
+    <label class="form-check-label">
+      <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2"> M
+    </label>
+  </div>
+  <div class="form-check form-check-inline disabled">
+    <label class="form-check-label">
+      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled> L
+    </label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
   </body>
 </html>
